# voxel-renderer

./: Cargo.toml  README.md
assets/shaders/: ray_march.wgsl  voxels.wgsl  voxels_prepass.wgsl
crates/bevy_voxels/: Cargo.toml
crates/bevy_voxels/src/: lib.rs  octree.rs
crates/bevy_voxels/src/math/: aabb.rs
src/: main.rs  movement.rs  voxels.rs
