[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
# bevy = "0.11.0"
bevy_voxels = { path = "crates/bevy_voxels" }

[workspace]
resolver = "2"
members = ["crates/bevy_voxels"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
